--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "gh-pages": "^3.1.0",
     "i18next": "^19.7.0",
     "i18next-xhr-backend": "^3.2.2",
+    "moment": "^2.29.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-i18next": "^11.7.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-spring": "^8.0.27",
     "shards-react": "^1.0.3"
   },
   "scripts": {
